crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_missing_type_annotation_3.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_missing_type_annotation_3),\n    functions::parse_stmt, \"let x:\")"

---
error: unexpected end of file
  ┌─ stmt_vardecl_missing_type_annotation_3:1:7
  │
1 │ let x:
  │       ^


